feat: add controlled equipment asset status
